[workspace]

[lib]
crate-type = ["staticlib"]

[package]
name = "afx_hook_source2_rs"
version = "0.1.0"
authors = ["advancedfx.org <contact@advancedfx.org>"]
license = "MIT"
homepage = "https://github.com/advancedfx"
repository = "https://github.com/advancedfx/advancedfx"
edition = "2021"

[dependencies]
boa_engine = "0.20.0"
boa_gc = "0.20.0"
boa_runtime = "0.20.0"
async-tungstenite = { version = "0.28.2", features = ["async-std-runtime"] }
futures = "0.3.31"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
# debug = true