[workspace]

[lib]
crate-type = ["staticlib"]

[package]
name = "afx_hook_source2_rs"
version = "0.1.0"
authors = ["advancedfx.org <contact@advancedfx.org>"]
license = "MIT"
homepage = "https://github.com/advancedfx"
repository = "https://github.com/advancedfx/advancedfx"
edition = "2024"

[dependencies]
boa_engine = "0.21.0"
boa_gc = "0.21.0"
boa_runtime = "0.21.0"
async-std = { version = "1.0", features = ["attributes", "unstable"] }
async-tungstenite = { version = "0.33.0", features = ["async-std-runtime"] }
futures = "0.3.32"
futures-lite = "2.6.1"
futures-concurrency = "7.6.3"
smol = "2.0.2"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
# debug = true